--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "name": "concesionario-backend",
   "version": "1.0.0",
   "description": "Repositorio destinado al backend",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
